<resources>
    <string name="app_name">Homework5122</string>
    <string name="btn_settings">Настройки</string>
    <string name="tv_name">Название файла</string>
    <string name="et_filename">Введите название файла</string>
    <string name="btn_apply">Применить</string>
    <string name="msg_file_error">File error</string>
    <string name="msg_request_denied">Request denied</string>
    <string name="msg_file_not_exists_error">Файл не найден</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_c">C</string>
    <string name="btn_addition">+/-</string>
    <string name="btn_percent">%</string>
    <string name="btn_division">/</string>
    <string name="btn_multiplication">x</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_back">back</string>
    <string name="btn_sin">sin</string>
    <string name="btn_asin">asin</string>
    <string name="btn_sqrt">&#8730;</string>
    <string name="btn_log">log</string>
    <string name="btn_cos">cos</string>
    <string name="btn_acos">acos</string>
    <string name="btn_x2">x&#94;2</string>
    <string name="btn_xy">x&#94;y</string>
    <string name="btn_in">In</string>
    <string name="btn_tan">tan</string>
    <string name="btn_atan">atan</string>
    <string name="btn_en">e<sup><small>n</small></sup></string>
    <string name="btn_pi">pi</string>
    <string name="btn_left_s">(</string>
    <string name="btn_right_s">)</string>
    <string name="btn_x">x!</string>
    <string name="btn_switch">switch to main</string>
    <string name="btn_switch_en">switch to eng</string>
    <string name="btn_mc">MC</string>
    <string name="btn_mplus">M+</string>
    <string name="btn_mminus">M-</string>
    <string name="btn_mr">MR</string>
    <string name="btn_btn">Btn</string>
    <string name="btn_1x">1/x</string>


</resources>
