<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        style="@style/btn_num.result"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toTopOf="@+id/gh_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/txt_but"
        style="@style/btn_num"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_6" />

    <TextView
        android:id="@+id/txtdot"
        style="@style/btn_num"
        android:text="@string/btn_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toEndOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_6" />

    <TextView
        android:id="@+id/txt_equal"
        style="@style/btn_num.btn_action"
        android:text="@string/btn_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gv_3"
        app:layout_constraintTop_toTopOf="@+id/gh_5" />

    <TextView
        android:id="@+id/txt_1"
        style="@style/btn_num"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/gh_6"
        app:layout_constraintEnd_toStartOf="@+id/gv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_5" />

    <TextView
        android:id="@+id/txt_2"
        style="@style/btn_num"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/gh_6"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="@+id/gv_1"
        app:layout_constraintTop_toTopOf="@+id/gh_5" />

    <TextView
        android:id="@+id/txt_3"
        style="@style/btn_num"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@+id/gh_6"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toStartOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_5" />

    <TextView
        android:id="@+id/txt_4"
        style="@style/btn_num"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@+id/gh_5"
        app:layout_constraintEnd_toStartOf="@+id/gv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_4" />

    <TextView
        android:id="@+id/txt_5"
        style="@style/btn_num"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toTopOf="@+id/gh_5"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="@+id/gv_1"
        app:layout_constraintTop_toTopOf="@+id/gh_4" />

    <TextView
        android:id="@+id/txt_6"
        style="@style/btn_num"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toTopOf="@+id/gh_5"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toStartOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_4" />

    <TextView
        android:id="@+id/txt_plus"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_plus"
        app:layout_constraintBottom_toTopOf="@+id/gh_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gv_3"
        app:layout_constraintTop_toTopOf="@+id/gh_4" />

    <TextView
        android:id="@+id/txt_7"
        style="@style/btn_num"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toTopOf="@+id/gh_4"
        app:layout_constraintEnd_toStartOf="@+id/gv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_3" />

    <TextView
        android:id="@+id/txt_8"
        style="@style/btn_num"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toTopOf="@+id/gh_4"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="@+id/gv_1"
        app:layout_constraintTop_toTopOf="@+id/gh_3" />

    <TextView
        android:id="@+id/txt_9"
        style="@style/btn_num"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toTopOf="@+id/gh_4"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toStartOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_3" />

    <TextView
        android:id="@+id/txt_minus"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_minus"
        app:layout_constraintBottom_toTopOf="@+id/gh_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gv_3"
        app:layout_constraintTop_toTopOf="@+id/gh_3" />

    <TextView
        android:id="@+id/txt_C"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_c"
        app:layout_constraintBottom_toTopOf="@+id/gh_3"
        app:layout_constraintEnd_toStartOf="@+id/gv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_2" />

    <TextView
        android:id="@+id/txt_plmin"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_addition"
        app:layout_constraintBottom_toTopOf="@+id/gh_3"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="@+id/gv_1"
        app:layout_constraintTop_toTopOf="@+id/gh_2" />

    <TextView
        android:id="@+id/txt_division"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_division"
        app:layout_constraintBottom_toTopOf="@+id/gh_3"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toStartOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_2" />

    <TextView
        android:id="@+id/txt_multiplication"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_multiplication"
        app:layout_constraintBottom_toTopOf="@+id/gh_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gv_3"
        app:layout_constraintTop_toTopOf="@+id/gh_2" />

    <TextView
        android:id="@+id/txt_MC"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_mc"
        app:layout_constraintBottom_toTopOf="@+id/gh_2"
        app:layout_constraintEnd_toStartOf="@+id/gv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh_1" />

    <TextView
        android:id="@+id/txt_mplus"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_mplus"
        app:layout_constraintBottom_toTopOf="@+id/gh_2"
        app:layout_constraintEnd_toStartOf="@+id/gv_2"
        app:layout_constraintStart_toStartOf="@+id/gv_1"
        app:layout_constraintTop_toTopOf="@+id/gh_1" />

    <TextView
        android:id="@+id/txt_mminus"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_mminus"
        app:layout_constraintBottom_toTopOf="@+id/gh_2"
        app:layout_constraintEnd_toStartOf="@+id/gv_3"
        app:layout_constraintStart_toStartOf="@+id/gv_2"
        app:layout_constraintTop_toTopOf="@+id/gh_1" />

    <TextView
        android:id="@+id/txt_mr"
        style="@style/btn_num.btn_action2"
        android:text="@string/btn_mr"
        app:layout_constraintBottom_toTopOf="@+id/gh_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gv_3"
        app:layout_constraintTop_toTopOf="@+id/gh_1" />


</androidx.constraintlayout.widget.ConstraintLayout>