<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name" />

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_filename"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_apply"
        style="@style/btn"
        android:text="@string/btn_apply" />
</LinearLayout>